--- a/obg1.ipynb
+++ b/obg1.ipynb
@@ -301,8 +301,26 @@
     "def on_load_click(b):\n",
     "    \"\"\"Handle load button click\"\"\"\n",
     "    if uploader.value:\n",
-    "        uploaded_file = list(uploader.value.values())[0]\n",
-    "        file_name = list(uploader.value.keys())[0]\n",
+    "        # Handle both tuple and dict formats from ipywidgets\n",
+    "        try:\n",
+    "            if isinstance(uploader.value, tuple):\n",
+    "                # Tuple format: (FileInfo(name='...', content=<bytes>), ...)\n",
+    "                uploaded_file = uploader.value[0]\n",
+    "                file_name = uploaded_file['name']\n",
+    "                file_content = uploaded_file['content']\n",
+    "            else:\n",
+    "                # Dict format: {'filename': {'content': ..., 'metadata': ...}}\n",
+    "                uploaded_file = list(uploader.value.values())[0]\n",
+    "                file_name = list(uploader.value.keys())[0]\n",
+    "                file_content = uploaded_file['content']\n",
+    "        except (KeyError, IndexError, TypeError) as e:\n",
+    "            with status_output:\n",
+    "                clear_output()\n",
+    "                print(f\"❌ Error reading uploaded file structure: {str(e)}\")\n",
+    "                print(f\"\\nDebug info:\")\n",
+    "                print(f\"  uploader.value type: {type(uploader.value)}\")\n",
+    "                print(f\"  uploader.value: {uploader.value}\")\n",
+    "            return\n",
     "        \n",
     "        with status_output:\n",
     "            clear_output()\n",
@@ -313,7 +331,7 @@
     "            file_type = 'pdf' if file_name.endswith('.pdf') else 'text'\n",
     "            \n",
     "            # Load the document\n",
-    "            generator.load_document(uploaded_file['content'], file_type)\n",
+    "            generator.load_document(file_content, file_type)\n",
     "            \n",
     "            with status_output:\n",
     "                clear_output()\n",
@@ -324,6 +342,8 @@
     "            with status_output:\n",
     "                clear_output()\n",
     "                print(f\"❌ Error loading file: {str(e)}\")\n",
+    "                import traceback\n",
+    "                traceback.print_exc()\n",
     "\n",
     "uploader.observe(on_file_upload, names='value')\n",
     "load_button.on_click(on_load_click)\n",
