--- a/obg1.ipynb
+++ b/obg1.ipynb
@@ -9,33 +9,9 @@
     "This notebook generates obituaries from uploaded PDF or text files and allows conversational follow-up with Claude.\n",
     "\n",
     "## Setup Instructions\n",
-    "1. Install required packages\n",
-    "2. Add your Anthropic API key\n",
-    "3. Upload a document about the person\n",
-    "4. Generate and refine the obituary through conversation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 1: Install Required Packages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install anthropic pypdf ipywidgets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 2: Import Libraries"
+    "1. Add your Anthropic API key\n",
+    "2. Upload a document about the person\n",
+    "3. Generate and refine the obituary through conversation"
    ]
   },
   {
@@ -70,22 +46,11 @@
     "# Enter your API key here\n",
     "API_KEY = \"\"  # Replace with your actual API key\n",
     "\n",
-    "# Or use environment variable\n",
-    "if not API_KEY:\n",
-    "    API_KEY = os.environ.get(\"ANTHROPIC_API_KEY\", \"\")\n",
-    "\n",
     "if not API_KEY:\n",
     "    print(\"⚠️ Please set your API key above or in the ANTHROPIC_API_KEY environment variable\")\n",
     "else:\n",
     "    print(\"✓ API key configured\")\n",
     "    client = anthropic.Anthropic(api_key=API_KEY)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 4: Helper Functions"
    ]
   },
   {
@@ -229,13 +194,7 @@
     "    def reset_conversation(self):\n",
     "        \"\"\"Clear the conversation history and start fresh.\"\"\"\n",
     "        self.conversation_history = []\n",
-    "        print(\"✓ Conversation reset\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "        print(\"✓ Conversation reset\")\n",
     "## Step 5: Initialize the Generator"
    ]
   },
@@ -359,70 +318,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option B: Paste text directly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Text area for pasting content\n",
-    "text_area = widgets.Textarea(\n",
-    "    value='',\n",
-    "    placeholder='Paste information about the person here (birth date, family, career, hobbies, etc.)...',\n",
-    "    description='',\n",
-    "    layout=widgets.Layout(width='100%', height='200px')\n",
-    ")\n",
-    "\n",
-    "load_text_button = widgets.Button(\n",
-    "    description='Load Text',\n",
-    "    button_style='success',\n",
-    "    tooltip='Click to load the pasted text'\n",
-    ")\n",
-    "\n",
-    "text_status = widgets.Output()\n",
-    "\n",
-    "def on_load_text_click(b):\n",
-    "    \"\"\"Handle text load button click\"\"\"\n",
-    "    content = text_area.value.strip()\n",
-    "    \n",
-    "    if not content or content == '':\n",
-    "        with text_status:\n",
-    "            clear_output()\n",
-    "            print(\"❌ Please paste some text first!\")\n",
-    "        return\n",
-    "    \n",
-    "    with text_status:\n",
-    "        clear_output()\n",
-    "        print(\"Loading text...\")\n",
-    "    \n",
-    "    try:\n",
-    "        generator.load_document(content, 'text')\n",
-    "        with text_status:\n",
-    "            clear_output()\n",
-    "            print(f\"✅ Text loaded successfully!\")\n",
-    "            print(f\"   Length: {len(generator.document_content)} characters\")\n",
-    "            print(f\"\\n   Ready to generate obituary! Go to Step 7.\")\n",
-    "    except Exception as e:\n",
-    "        with text_status:\n",
-    "            clear_output()\n",
-    "            print(f\"❌ Error loading text: {str(e)}\")\n",
-    "\n",
-    "load_text_button.on_click(on_load_text_click)\n",
-    "\n",
-    "display(widgets.VBox([text_area, load_text_button, text_status]))\n",
-    "print(\"\\n👆 Steps:\")\n",
-    "print(\"1. Paste or type information in the text area above\")\n",
-    "print(\"2. Click 'Load Text' to process it\")\n",
-    "print(\"3. Proceed to Step 7 to generate the obituary\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Verify Document is Loaded (Optional)"
    ]
   },
@@ -444,13 +339,7 @@
     "    print(\"❌ No document loaded yet!\")\n",
     "    print(\"\\nPlease go back to Step 6 and:\")\n",
     "    print(\"1. Use the file uploader, OR\")\n",
-    "    print(\"2. Paste text in Option B\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    print(\"2. Paste text in Option B\")\n",
     "## Step 7: Generate Initial Obituary"
    ]
   },
