--- a/parone-a4.ipynb
+++ b/parone-a4.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Biography Generator - Interactive Notebook\n",
+    "# Biography Generator - Single Cell Version\n",
     "\n",
     "This notebook generates professional narratives, obituaries, or dating app introductions from uploaded documents using Claude AI.\n",
+    "\n",
+    "**Just run the cell below and follow the prompts!**\n",
     "\n",
     "**Features:**\n",
     "- Load PDF or TXT documents\n",
@@ -21,15 +23,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import anthropic\n",
-    "from pypdf import PdfReader\n",
+    "# ============================================================================\n",
+    "# BIOGRAPHY GENERATOR - ALL-IN-ONE CELL\n",
+    "# Just run this cell and follow the prompts!\n",
+    "# ============================================================================\n",
+    "\n",
+    "# Install packages (only runs if not already installed)\n",
+    "try:\n",
+    "    import anthropic\n",
+    "    from pypdf import PdfReader\n",
+    "except ImportError:\n",
+    "    print(\"Installing required packages...\")\n",
+    "    import sys\n",
+    "    !{sys.executable} -m pip install -q anthropic pypdf\n",
+    "    import anthropic\n",
+    "    from pypdf import PdfReader\n",
+    "\n",
     "import os\n",
     "from datetime import datetime\n",
     "import glob\n",
     "from IPython.display import display, Markdown\n",
-    "## 2. Helper Functions\n",
     "\n",
-    "Functions to extract text from different file formats.\n",
+    "# ============================================================================\n",
+    "# HELPER FUNCTIONS\n",
+    "# ============================================================================\n",
+    "\n",
     "def extract_text_from_pdf(file_path):\n",
     "    \"\"\"Extract text from a PDF file.\"\"\"\n",
     "    try:\n",
@@ -42,7 +60,6 @@
     "        print(f\"Error reading PDF: {e}\")\n",
     "        return None\n",
     "\n",
-    "\n",
     "def read_text_file(file_path):\n",
     "    \"\"\"Read text from a text file.\"\"\"\n",
     "    try:\n",
@@ -51,11 +68,11 @@
     "    except Exception as e:\n",
     "        print(f\"Error reading text file: {e}\")\n",
     "        return None\n",
-    "## 3. BiographyGenerator Class\n",
     "\n",
-    "Main class that manages document loading and biography generation with conversation history.\n",
+    "# ============================================================================\n",
+    "# BIOGRAPHY GENERATOR CLASS\n",
+    "# ============================================================================\n",
     "\n",
-    "**Key Concept:** The conversation history list stores all messages (user and assistant) and is sent with each API call. This allows Claude to remember context and refine its previous outputs.\n",
     "class BiographyGenerator:\n",
     "    \"\"\"Manages document loading and biography generation with conversation history.\"\"\"\n",
     "    \n",
@@ -70,7 +87,6 @@
     "            print(f\"❌ File not found: {file_path}\")\n",
     "            return False\n",
     "            \n",
-    "        # Determine file type\n",
     "        if file_path.lower().endswith('.pdf'):\n",
     "            self.document_content = extract_text_from_pdf(file_path)\n",
     "        elif file_path.lower().endswith(('.txt', '.text')):\n",
@@ -87,16 +103,9 @@
     "        return False\n",
     "    \n",
     "    def generate_content(self, output_type):\n",
-    "        \"\"\"\n",
-    "        Generate content based on the selected type.\n",
-    "        \n",
-    "        Args:\n",
-    "            output_type: 1 (Professional narrative), 2 (Obituary), or 3 (Dating app intro)\n",
-    "        \"\"\"\n",
     "        if not self.document_content:\n",
     "            return \"❌ Please load a document first!\"\n",
     "        \n",
-    "        # Define prompts for each type\n",
     "        prompts = {\n",
     "            1: \"\"\"Based on the following information about a person, please write a professional narrative biography. \n",
     "This should be suitable for a professional website, LinkedIn profile, or corporate bio. \n",
@@ -129,13 +138,8 @@
     "        }\n",
     "        \n",
     "        prompt = prompts[output_type].format(content=self.document_content)\n",
+    "        self.conversation_history = [{\"role\": \"user\", \"content\": prompt}]\n",
     "        \n",
-    "        # Start new conversation\n",
-    "        self.conversation_history = [\n",
-    "            {\"role\": \"user\", \"content\": prompt}\n",
-    "        ]\n",
-    "        \n",
-    "        # Call Claude API\n",
     "        print(\"🤔 Generating content...\\n\")\n",
     "        response = self.client.messages.create(\n",
     "            model=\"claude-sonnet-4-20250514\",\n",
@@ -143,27 +147,16 @@
     "            messages=self.conversation_history\n",
     "        )\n",
     "        \n",
-    "        # Add Claude's response to history\n",
     "        assistant_message = response.content[0].text\n",
-    "        self.conversation_history.append({\n",
-    "            \"role\": \"assistant\",\n",
-    "            \"content\": assistant_message\n",
-    "        })\n",
-    "        \n",
+    "        self.conversation_history.append({\"role\": \"assistant\", \"content\": assistant_message})\n",
     "        return assistant_message\n",
     "    \n",
     "    def follow_up(self, user_message):\n",
-    "        \"\"\"Send a follow-up message to refine the content.\"\"\"\n",
     "        if not self.conversation_history:\n",
     "            return \"❌ Please generate content first!\"\n",
     "        \n",
-    "        # Add user's follow-up to conversation\n",
-    "        self.conversation_history.append({\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": user_message\n",
-    "        })\n",
+    "        self.conversation_history.append({\"role\": \"user\", \"content\": user_message})\n",
     "        \n",
-    "        # Call Claude with full conversation history\n",
     "        print(\"🤔 Processing your request...\\n\")\n",
     "        response = self.client.messages.create(\n",
     "            model=\"claude-sonnet-4-20250514\",\n",
@@ -171,20 +164,11 @@
     "            messages=self.conversation_history\n",
     "        )\n",
     "        \n",
-    "        # Add Claude's response to history\n",
     "        assistant_message = response.content[0].text\n",
-    "        self.conversation_history.append({\n",
-    "            \"role\": \"assistant\",\n",
-    "            \"content\": assistant_message\n",
-    "        })\n",
-    "        \n",
+    "        self.conversation_history.append({\"role\": \"assistant\", \"content\": assistant_message})\n",
     "        return assistant_message\n",
     "    \n",
     "    def export_conversation(self, filename=None):\n",
-    "        \"\"\"\n",
-    "        Export the full conversation history to a text file.\n",
-    "        This shows how outputs from Claude are reused as inputs in subsequent turns.\n",
-    "        \"\"\"\n",
     "        if not self.conversation_history:\n",
     "            print(\"❌ No conversation to export!\")\n",
     "            return None\n",
@@ -202,64 +186,34 @@
     "                f.write(f\"Total Messages: {len(self.conversation_history)}\\n\")\n",
     "                f.write(\"=\"*80 + \"\\n\\n\")\n",
     "                \n",
-    "                f.write(\"NOTE: This conversation demonstrates how Claude's outputs are reused as\\n\")\n",
-    "                f.write(\"inputs in subsequent API calls by maintaining conversation history.\\n\")\n",
-    "                f.write(\"Each message includes the full context of all previous messages.\\n\\n\")\n",
-    "                f.write(\"=\"*80 + \"\\n\\n\")\n",
-    "                \n",
     "                for i, message in enumerate(self.conversation_history, 1):\n",
     "                    role = \"USER\" if message[\"role\"] == \"user\" else \"CLAUDE\"\n",
-    "                    content = message[\"content\"]\n",
-    "                    \n",
-    "                    f.write(f\"\\n{'='*80}\\n\")\n",
-    "                    f.write(f\"MESSAGE {i}: {role}\\n\")\n",
-    "                    f.write(f\"{'='*80}\\n\\n\")\n",
-    "                    f.write(content)\n",
-    "                    f.write(\"\\n\\n\")\n",
-    "                    \n",
-    "                    # Add explanation after first exchange\n",
-    "                    if i == 2:\n",
-    "                        f.write(f\"\\n{'~'*80}\\n\")\n",
-    "                        f.write(\"📝 CONVERSATION CONTEXT NOTE:\\n\")\n",
-    "                        f.write(\"From this point forward, every API call includes BOTH messages above.\\n\")\n",
-    "                        f.write(\"Claude can reference its previous response and the original document.\\n\")\n",
-    "                        f.write(f\"{'~'*80}\\n\\n\")\n",
-    "                \n",
-    "                # Add summary at the end\n",
-    "                f.write(f\"\\n{'='*80}\\n\")\n",
-    "                f.write(\"CONVERSATION SUMMARY\\n\")\n",
-    "                f.write(f\"{'='*80}\\n\\n\")\n",
-    "                f.write(f\"Total exchanges: {len(self.conversation_history) // 2}\\n\")\n",
-    "                f.write(f\"User messages: {sum(1 for m in self.conversation_history if m['role'] == 'user')}\\n\")\n",
-    "                f.write(f\"Claude responses: {sum(1 for m in self.conversation_history if m['role'] == 'assistant')}\\n\\n\")\n",
-    "                f.write(\"This transcript demonstrates:\\n\")\n",
-    "                f.write(\"1. How initial prompts establish context\\n\")\n",
-    "                f.write(\"2. How Claude's outputs inform subsequent inputs\\n\")\n",
-    "                f.write(\"3. How conversation history enables iterative refinement\\n\")\n",
-    "                f.write(\"4. Proper conversation management for LLM applications\\n\")\n",
-    "            \n",
+    "                    f.write(f\"\\n{'='*80}\\nMESSAGE {i}: {role}\\n{'='*80}\\n\\n\")\n",
+    "                    f.write(message[\"content\"] + \"\\n\\n\")\n",
     "            return filename\n",
-    "            \n",
     "        except Exception as e:\n",
     "            print(f\"❌ Error exporting conversation: {e}\")\n",
     "            return None\n",
-    "## 4. Setup - API Key\n",
     "\n",
-    "#Set API key directly (not recommended for shared notebooks)\n",
-    "# API_KEY = \"your-api-key-here\"\n",
+    "# ============================================================================\n",
+    "# MAIN PROGRAM\n",
+    "# ============================================================================\n",
     "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"          📝 BIOGRAPHY GENERATOR 📝\")\n",
+    "print(\"=\"*70 + \"\\n\")\n",
+    "\n",
+    "# Get API key\n",
+    "API_KEY = os.environ.get('ANTHROPIC_API_KEY')\n",
     "if not API_KEY:\n",
     "    API_KEY = input(\"Enter your Anthropic API key: \").strip()\n",
     "\n",
-    "# Initialize the generator\n",
     "generator = BiographyGenerator(API_KEY)\n",
-    "print(\"✅ Generator initialized!\")\n",
-    "## 5. Load Document\n",
+    "print(\"✅ Generator initialized!\\n\")\n",
     "\n",
-    "Browse available files or enter a file path manually.\n",
-    "# Find available PDF and TXT files\n",
-    "pdf_files = glob.glob(\"*.pdf\") + glob.glob(\"**/*.pdf\", recursive=False)\n",
-    "txt_files = glob.glob(\"*.txt\") + glob.glob(\"**/*.txt\", recursive=False)\n",
+    "# Browse files\n",
+    "pdf_files = glob.glob(\"*.pdf\")\n",
+    "txt_files = glob.glob(\"*.txt\")\n",
     "all_files = sorted(set(pdf_files + txt_files))\n",
     "\n",
     "print(\"📁 Available files:\\n\")\n",
@@ -268,82 +222,90 @@
     "    file_type = \"PDF\" if file.endswith('.pdf') else \"TXT\"\n",
     "    print(f\"  {i}. {file:<50} ({file_size:.1f} KB) [{file_type}]\")\n",
     "\n",
-    "if not all_files:\n",
-    "    print(\"❌ No files found. Please add PDF or TXT files to the directory.\")\n",
-    "# Select a file by number or enter path manually\n",
-    "# Option 1: Select by number\n",
-    "file_number = 1  # Change this to select different file\n",
-    "\n",
-    "# Option 2: Or enter path directly\n",
-    "# file_path = \"path/to/your/file.pdf\"\n",
-    "\n",
     "if all_files:\n",
-    "    file_path = all_files[file_number - 1]\n",
-    "    print(f\"Selected: {file_path}\\n\")\n",
-    "    generator.load_document(file_path)\n",
-    "else:\n",
-    "    print(\"Please add a file and run this cell again\")\n",
-    "# Select output type (1, 2, or 3)\n",
-    "output_type = 1  # Change this to 1, 2, or 3\n",
-    "\n",
-    "type_names = {\n",
-    "    1: \"Professional Narrative\",\n",
-    "    2: \"Obituary\",\n",
-    "    3: \"Dating App Introduction\"\n",
-    "}\n",
-    "\n",
-    "result = generator.generate_content(output_type)\n",
-    "\n",
-    "# Display result with formatting\n",
-    "display(Markdown(f\"## {type_names[output_type]}\"))\n",
-    "display(Markdown(result))\n",
-    "# Enter your refinement request\n",
-    "refinement = \"Make it shorter and more engaging\"  # Customize this\n",
-    "\n",
-    "result = generator.follow_up(refinement)\n",
-    "\n",
-    "# Display refined result\n",
-    "display(Markdown(f\"## Refined {type_names[output_type]}\"))\n",
-    "display(Markdown(result))\n",
-    "# Save current content\n",
-    "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "output_file = f\"{type_names[output_type].lower().replace(' ', '_')}_{timestamp}.txt\"\n",
-    "\n",
-    "with open(output_file, 'w', encoding='utf-8') as f:\n",
-    "    f.write(f\"{type_names[output_type].upper()}\\n\")\n",
-    "    f.write(\"=\"*70 + \"\\n\\n\")\n",
-    "    f.write(result)\n",
-    "    f.write(\"\\n\\n\" + \"=\"*70 + \"\\n\")\n",
-    "    f.write(f\"Generated: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\\n\")\n",
-    "\n",
-    "print(f\"✅ Content saved to: {output_file}\")\n",
-    "# Export conversation history\n",
-    "filename = generator.export_conversation()\n",
-    "\n",
-    "if filename:\n",
-    "    print(f\"✅ Conversation history exported to: {filename}\")\n",
-    "    print(\"\\nThis file shows:\")\n",
-    "    print(\"  • How initial prompts establish context\")\n",
-    "    print(\"  • How Claude's outputs inform subsequent inputs\")\n",
-    "    print(\"  • How conversation history enables iterative refinement\")\n",
-    "# Display conversation history\n",
-    "print(f\"Total messages in conversation: {len(generator.conversation_history)}\\n\")\n",
-    "\n",
-    "for i, message in enumerate(generator.conversation_history, 1):\n",
-    "    role = message['role'].upper()\n",
-    "    content = message['content']\n",
+    "    file_choice = input(f\"\\nSelect file number (1-{len(all_files)}), or enter file path: \").strip()\n",
     "    \n",
-    "    # Truncate long messages for display\n",
-    "    if len(content) > 500:\n",
-    "        content_preview = content[:500] + \"\\n... [truncated]\"\n",
+    "    if file_choice.isdigit() and 1 <= int(file_choice) <= len(all_files):\n",
+    "        file_path = all_files[int(file_choice) - 1]\n",
     "    else:\n",
-    "        content_preview = content\n",
+    "        file_path = file_choice\n",
+    "else:\n",
+    "    file_path = input(\"Enter file path: \").strip()\n",
+    "\n",
+    "# Load document\n",
+    "if generator.load_document(file_path):\n",
+    "    # Select output type\n",
+    "    print(\"\\n📋 Select Output Type:\")\n",
+    "    print(\"  1. Professional Narrative\")\n",
+    "    print(\"  2. Obituary\")\n",
+    "    print(\"  3. Dating App Introduction\")\n",
     "    \n",
-    "    print(f\"\\n{'='*70}\")\n",
-    "    print(f\"MESSAGE {i}: {role}\")\n",
-    "    print(f\"{'='*70}\")\n",
-    "    print(content_preview)\n",
-    "    print()"
+    "    output_type = int(input(\"\\nEnter choice (1-3): \").strip())\n",
+    "    \n",
+    "    type_names = {\n",
+    "        1: \"Professional Narrative\",\n",
+    "        2: \"Obituary\",\n",
+    "        3: \"Dating App Introduction\"\n",
+    "    }\n",
+    "    \n",
+    "    # Generate content\n",
+    "    result = generator.generate_content(output_type)\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\"*70)\n",
+    "    print(f\"  {type_names[output_type].upper()}\")\n",
+    "    print(\"=\"*70)\n",
+    "    print(result)\n",
+    "    print(\"=\"*70 + \"\\n\")\n",
+    "    \n",
+    "    # Offer refinement\n",
+    "    refine = input(\"Would you like to refine the content? (y/n): \").strip().lower()\n",
+    "    \n",
+    "    if refine == 'y':\n",
+    "        refinement = input(\"How would you like to refine it? (e.g., 'Make it shorter'): \").strip()\n",
+    "        result = generator.follow_up(refinement)\n",
+    "        \n",
+    "        print(\"\\n\" + \"=\"*70)\n",
+    "        print(f\"  REFINED {type_names[output_type].upper()}\")\n",
+    "        print(\"=\"*70)\n",
+    "        print(result)\n",
+    "        print(\"=\"*70 + \"\\n\")\n",
+    "    \n",
+    "    # Save option\n",
+    "    save = input(\"Save result to file? (y/n): \").strip().lower()\n",
+    "    if save == 'y':\n",
+    "        timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "        output_file = f\"{type_names[output_type].lower().replace(' ', '_')}_{timestamp}.txt\"\n",
+    "        with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "            f.write(f\"{type_names[output_type].upper()}\\n{'='*70}\\n\\n{result}\\n\")\n",
+    "        print(f\"✅ Saved to: {output_file}\")\n",
+    "    \n",
+    "    # Export conversation\n",
+    "    export = input(\"Export conversation history? (y/n): \").strip().lower()\n",
+    "    if export == 'y':\n",
+    "        filename = generator.export_conversation()\n",
+    "        if filename:\n",
+    "            print(f\"✅ Conversation exported to: {filename}\")\n",
+    "\n",
+    "print(\"\\n👋 Done!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key Concepts Explained\n",
+    "\n",
+    "### 1. Conversation History Management\n",
+    "The `conversation_history` list stores all messages (both user and assistant). Each time you call Claude's API, you send the **entire history**, which allows Claude to remember what it said before.\n",
+    "\n",
+    "### 2. Output as Input\n",
+    "When you ask Claude to refine content, the previous response is already in the conversation history, so Claude can modify its own earlier output.\n",
+    "\n",
+    "### 3. Document Processing\n",
+    "The code extracts text from PDFs and TXT files, converting them into a format that Claude can understand.\n",
+    "\n",
+    "### 4. Prompt Engineering\n",
+    "Different prompts produce different styles of output (professional, obituary, dating app bio)."
    ]
   }
  ],
