--- a/parone-a4.ipynb
+++ b/parone-a4.ipynb
@@ -257,21 +257,24 @@
     "    print(result)\n",
     "    print(\"=\"*70 + \"\\n\")\n",
     "    \n",
-    "    # Offer refinement\n",
-    "    refine = input(\"Would you like to refine the content? (y/n): \").strip().lower()\n",
-    "    \n",
-    "    if refine == 'y':\n",
-    "        refinement = input(\"How would you like to refine it? (e.g., 'Make it shorter'): \").strip()\n",
-    "        result = generator.follow_up(refinement)\n",
+    "    # Multiple refinements loop\n",
+    "    while True:\n",
+    "        refine = input(\"\\nWould you like to refine the content? (y/n): \").strip().lower()\n",
     "        \n",
-    "        print(\"\\n\" + \"=\"*70)\n",
-    "        print(f\"  REFINED {type_names[output_type].upper()}\")\n",
-    "        print(\"=\"*70)\n",
-    "        print(result)\n",
-    "        print(\"=\"*70 + \"\\n\")\n",
+    "        if refine == 'y':\n",
+    "            refinement = input(\"How would you like to refine it? (e.g., 'Make it shorter'): \").strip()\n",
+    "            result = generator.follow_up(refinement)\n",
+    "            \n",
+    "            print(\"\\n\" + \"=\"*70)\n",
+    "            print(f\"  REFINED {type_names[output_type].upper()}\")\n",
+    "            print(\"=\"*70)\n",
+    "            print(result)\n",
+    "            print(\"=\"*70 + \"\\n\")\n",
+    "        else:\n",
+    "            break\n",
     "    \n",
     "    # Save option\n",
-    "    save = input(\"Save result to file? (y/n): \").strip().lower()\n",
+    "    save = input(\"\\nSave result to file? (y/n): \").strip().lower()\n",
     "    if save == 'y':\n",
     "        timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "        output_file = f\"{type_names[output_type].lower().replace(' ', '_')}_{timestamp}.txt\"\n",
@@ -280,7 +283,7 @@
     "        print(f\"✅ Saved to: {output_file}\")\n",
     "    \n",
     "    # Export conversation\n",
-    "    export = input(\"Export conversation history? (y/n): \").strip().lower()\n",
+    "    export = input(\"\\nExport conversation history? (y/n): \").strip().lower()\n",
     "    if export == 'y':\n",
     "        filename = generator.export_conversation()\n",
     "        if filename:\n",
