--- a/parone-a4.ipynb
+++ b/parone-a4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Biography Generator - Single Cell Version\n",
+    "# Biography Generator\n",
     "\n",
     "This notebook generates professional narratives, obituaries, or dating app introductions from uploaded documents using Claude AI.\n",
     "\n",
@@ -14,7 +14,7 @@
     "- Load PDF or TXT documents\n",
     "- Generate three types of biographies\n",
     "- Iterative refinement with conversation history\n",
-    "- Export conversation history showing how outputs become inputs"
+    "- Export conversation history"
    ]
   },
   {
@@ -23,12 +23,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ============================================================================\n",
-    "# BIOGRAPHY GENERATOR - ALL-IN-ONE CELL\n",
-    "# Just run this cell and follow the prompts!\n",
-    "# ============================================================================\n",
+    "'''\n",
+    "Course: INFO-629-686 - FA 25-26\n",
+    "Assignment 4: Large Language Model Demo - BIOGRAPHY GENERATOR\n",
+    "Student: Anthony Parone\n",
+    "Date: November 2025\n",
     "\n",
-    "# Install packages (only runs if not already installed)\n",
+    "\n",
+    "\n",
+    "'''\n",
     "try:\n",
     "    import anthropic\n",
     "    from pypdf import PdfReader\n",
@@ -44,9 +47,6 @@
     "import glob\n",
     "from IPython.display import display, Markdown\n",
     "\n",
-    "# ============================================================================\n",
-    "# HELPER FUNCTIONS\n",
-    "# ============================================================================\n",
     "\n",
     "def extract_text_from_pdf(file_path):\n",
     "    \"\"\"Extract text from a PDF file.\"\"\"\n",
@@ -290,25 +290,6 @@
     "            print(f\"✅ Conversation exported to: {filename}\")\n",
     "\n",
     "print(\"\\n👋 Done!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Key Concepts Explained\n",
-    "\n",
-    "### 1. Conversation History Management\n",
-    "The `conversation_history` list stores all messages (both user and assistant). Each time you call Claude's API, you send the **entire history**, which allows Claude to remember what it said before.\n",
-    "\n",
-    "### 2. Output as Input\n",
-    "When you ask Claude to refine content, the previous response is already in the conversation history, so Claude can modify its own earlier output.\n",
-    "\n",
-    "### 3. Document Processing\n",
-    "The code extracts text from PDFs and TXT files, converting them into a format that Claude can understand.\n",
-    "\n",
-    "### 4. Prompt Engineering\n",
-    "Different prompts produce different styles of output (professional, obituary, dating app bio)."
    ]
   }
  ],
